--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <script src="public/js/lib/jquery-2.1.3.min.js"></script>
+    <script src="public/js/lib/underscore-min.js"></script>
+    <script src="public/js/lib/backbone-min.js"></script>
+    <script src="public/js/lib/backbone.localStorage-min.js"></script>
 </head>
 <body>
-<p>Hello, nw.js</p>
+    <div id="container">Loading...</div>
+    <script src="public/js/app.js"></script>
 </body>
 </html>
